tests/error/array_multi_except.gw
// [contains] NullPtrException
int i[1][1];
NULL @=> i[0];
<<<i[0][0]>>>;
